-actually fixed alignment issue

--- a/style.scss
+++ b/style.scss
@@ -174,6 +174,7 @@ body {
 
 .navTypeText {
   width: 9em;
+  height: 0px;
   vertical-align: sub;  //baseline|length|sub|super|top|text-top|middle|bottom|text-bottom|initial|inherit;
 
 }
